--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,28 +1,27 @@
-name: CI - Build Docker Image
+name: CI - Build Docker Images
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build CloudNativeApp image
+        run: |
+          docker build \
+            -t cloudnativeapp:latest \
+            -f CloudNativeApp/Dockerfile \
+            CloudNativeApp
 
-    - name: Build Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/cloudnativeapp:latest .
-
-    - name: Push Docker image
-      run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/cloudnativeapp:latest
+      - name: Build GreetingService image
+        run: |
+          docker build \
+            -t greetingservice:latest \
+            -f GreetingService/Dockerfile \
+            GreetingService
