--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: CI - Build Docker Images
+name: CI - Build & Push Docker Image
 
 on:
   push:
@@ -12,16 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build CloudNativeApp image
-        run: |
-          docker build \
-            -t cloudnativeapp:latest \
-            -f CloudNativeApp/Dockerfile \
-            CloudNativeApp
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build GreetingService image
+      - name: Build Docker image
         run: |
-          docker build \
-            -t greetingservice:latest \
-            -f GreetingService/Dockerfile \
-            GreetingService
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/cloudnativeapp:latest ./CloudNativeApp
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/cloudnativeapp:latest
