--- a/argocd/cloudnative-dev.yaml
+++ b/argocd/cloudnative-dev.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: argocd
 spec:
   project: default
-
   source:
     repoURL: https://github.com/chaitaleerahate/cloud-native-dotnet-app
     targetRevision: main
@@ -14,11 +13,9 @@ spec:
       valueFiles:
         - values.yaml
         - values-dev.yaml
-
   destination:
     server: https://kubernetes.default.svc
-    namespace: cloudnative-dev
-
+    namespace: cloudnative-dev   # ✅ THIS LINE
   syncPolicy:
     automated:
       prune: true
